--- a/rabbitmq-docker/elastic/docker-compose.yml
+++ b/rabbitmq-docker/elastic/docker-compose.yml
@@ -1,7 +1,9 @@
-version: '2'
+version: '3'
+
 services:
   kibana:
-    image: docker.elastic.co/kibana/kibana:8.5.3
-    environment:
-      SERVER_NAME: kibana.example.org
-      ELASTICSEARCH_HOSTS: '["http://es01:9200","http://es02:9200","http://es03:9200"]'
+    image: kibana:8.5.3
+    ports:
+      - 5601:5601
+    volumes:
+      - ./kibana.yml:/usr/share/kibana/config/kibana.yml
